--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "hpp": "^0.2.3",
+    "morgan": "^1.10.1",
     "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/helmet": "^0.0.48",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
