--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "compression": "^1.8.1",
+    "compression": "npm:Compression@^0.1.0",
+    "Compression": "^0.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "get-video-duration": "^5.0.0",
+    "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "morgan": "^1.10.1",
+    "music-metadata": "^11.10.3",
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/express": "^5.0.6",
     "@types/helmet": "^0.0.48",
     "@types/morgan": "^1.9.10",
