--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "compression": "npm:Compression@^0.1.0",
-    "Compression": "^0.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-compression": "^1.0.2",
     "get-video-duration": "^5.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
