--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ggsecurty",
+  "name": "gg-tools-kit",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A Node.js toolkit for utilities and protections",
+  "main": "GGToolsKit.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/GGToolsKit.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/GGToolsKit.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "MohenedGG",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
