--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gg-tools-kit",
   "version": "1.0.0",
   "description": "A Node.js toolkit for utilities and protections",
-  "main": "GGToolsKit.js",
+  "main": "dist/GGToolsKit.js",
+  "types": "dist/GGToolsKit.d.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/GGToolsKit.ts",
     "build": "tsc",
@@ -12,6 +13,7 @@
   "author": "MohenedGG",
   "license": "ISC",
   "type": "commonjs",
+  "files": ["dist"],
   "dependencies": {
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
