--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gg-tools-kit",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A Node.js toolkit for utilities and protections",
   "main": "dist/GGToolsKit.js",
   "types": "dist/GGToolsKit.d.ts",
@@ -13,14 +13,15 @@
   "author": "MohenedGG",
   "license": "ISC",
   "type": "commonjs",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "express-compression": "^1.0.2",
     "get-video-duration": "^5.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
